--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </script>
 
     <!-- Include EmailJS library -->
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
         (function() {
             emailjs.init("YOUR_PUBLIC_API_KEY"); // Replace with your EmailJS Public API Key
