--- a/index.html
+++ b/index.html
@@ -229,12 +229,11 @@
 
     <!-- Include EmailJS library -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script>
-        (function() {
-            emailjs.init("YOUR_PUBLIC_API_KEY"); // Replace with your EmailJS Public API Key
+    
+     <script>
+        (function(){
+            emailjs.init("ABNRH9A251JC1pxei"); // Replace with your EmailJS Public API Key
         })();
-    </script>
-    <script>
 
         function getBrowserAndDeviceInfo() {
             const browserInfo = {
